--- a/views/recipe.hbs
+++ b/views/recipe.hbs
@@ -5,6 +5,9 @@
             <div class="recipe-actions">
                 <button class="btn btn-primary" onclick="showEditForm()">Edit Recipe</button>
                 <a href="/recipes" class="btn btn-secondary">Back to All Recipes</a>
+                <form action="/recipes/{{recipe.id}}/delete" method="POST" style="display:inline;">
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('确定要删除该菜谱吗？')">Delete</button>
+                </form>
             </div>
         </div>
         
@@ -67,6 +70,9 @@
                 <div class="form-actions">
                     <button type="submit" class="btn btn-primary">Update Recipe</button>
                     <button type="button" class="btn btn-secondary" onclick="hideEditForm()">Cancel</button>
+                    <form action="/recipes/{{recipe.id}}/delete" method="POST" style="display:inline; margin-left: 10px;">
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('确定要删除该菜谱吗？')">Delete</button>
+                    </form>
                 </div>
             </form>
         </div>
