--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,17 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/recipes">All Recipes</a></li>
+                {{#if currentUser}}
+                    <li><a href="/profile">Profile</a></li>
+                    <li>
+                        <form action="/logout" method="POST" style="display:inline;">
+                            <button type="submit" class="btn btn-link">Logout</button>
+                        </form>
+                    </li>
+                {{else}}
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/register">Register</a></li>
+                {{/if}}
             </ul>
         </nav>
     </header>
